Prioritize envvars over default values in environment properties-files