@@ -19,6 +19,9 @@ dependencies {
     // Fixtures
     testFixturesCompileOnly(libs.jackson.annotations)
     testFixturesCompileOnly(libs.kotlinx.serialization.core)
+
+    // Kotest extensions for withEnvironment("KEY", "VAL") { (...) }
+    testImplementation(libs.kotest.extensions.jvm)
 }
 
 @Suppress("UnstableApiUsage")
@@ -47,4 +50,9 @@ testing {
 @Suppress("UnstableApiUsage")
 tasks.named("check") {
     dependsOn(testing.suites.named("jacksonTest"), testing.suites.named("serializationTest"))
+}
+
+// Required for kotest extensions for withEnvironment("KEY", "VAL") { (...) }
+tasks.withType<Test>().configureEach {
+    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
